# skazo

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  seaweedfs_s3.json
docs/: 01-концепции-и-границы.md  02-модель-контента.md  03-пайплайн-подготовки-контента.md  04-читалка-и-пагинация.md  05-ревью-и-модерация.md  06-глоссарий.md  07-style-presets.md  90-mvp-стек-и-сервисы.md  91-mvp-схема-экранов-и-эндпойнтов.md  92-mvp-очереди-и-состояния.md  93-mvp-практичная-архитектура.md  DECISIONS.md  README.md  ROADMAP.md
src/config/: urls.py
src/config/settings/: base.py
src/core/management/commands/: minio_smoke.py  s3_smoke.py
